Fix imports, style placeholder, and make the select collapse on select

--- a/src/components/inputs/Number.scss
+++ b/src/components/inputs/Number.scss
@@ -1,4 +1,4 @@
-@import "~nti-style-common";
+@import "~@nti/style-common";
 
 .nti-number-input {
 	border-radius: 2px;
@@ -14,5 +14,10 @@
 
 	.nti-clearable-input & {
 		padding: rem-calc(0 30px 0 10px);
+	}
+
+	&::placeholder {
+		font-style: italic;
+		color: $tertiary-grey;
 	}
 }
