--- a/src/components/inputs/Text.scss
+++ b/src/components/inputs/Text.scss
@@ -15,4 +15,9 @@
 	.nti-clearable-input & {
 		padding: rem-calc(0 30px 0 10px);
 	}
+
+	&::placeholder {
+		font-style: italic;
+		color: $tertiary-grey;
+	}
 }
